--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.47.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@atproto/api": "^0.14.1",
+		"@atproto/oauth-client-browser": "^0.3.10",
+		"idb": "^8.0.2"
 	}
 }
